--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "description": "A Solana-based backend service for TokenMill, providing token management, staking, and vesting functionality.",
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/spl-token": "^0.4.9",
     "@solana/web3.js": "^1.98.0",
+    "axios": "^1.7.9",
     "big.js": "^6.2.2",
     "bn.js": "^5.2.1",
     "bs58": "^6.0.0",
