--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.7.9",
     "big.js": "^6.2.2",
     "bn.js": "^5.2.1",
+    "borsh": "^2.0.0",
+    "borsher": "^3.6.0",
     "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
